[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclashbot"
version = "v0.0.0"
description = "Automated Clash Royale"
authors = [
    { name = "Matthew Miglio", email = "matthew@pyclashbot.app" },
    { name = "Martin Miglio", email = "code@martinmiglio.dev" },
]
requires-python = ">=3.12.0,<3.13"
readme = "README.md"
license = {text = "NC-CL-1.0 AND CC-BY-NC-SA-4.0"}
classifiers = [
    "License :: Other/Proprietary License",
]
dependencies = [
    "opencv-python>=4.9.0,<5",
    "numpy>=2.2.1,<3",
    "pymemuc>=0.6.0,<0.7",
    "psutil>=6.1.0,<8",
    "pypresence>=4.3.0,<5",
    "pillow (>=11.3.0,<13.0.0)",
    "ttkbootstrap>=1.12.1,<1.21",
]

[tool.setuptools.packages.find]
include = ["pyclashbot*"]
exclude = ["assets*", "scripts*"]

[project.urls]
homepage = "https://pyclashbot.app"

[dependency-groups]
build = [
    "cx-freeze>=8.3.0,<9; sys_platform == 'win32'",
    "pyinstaller>=6.0.0,<7; sys_platform == 'darwin'",
    "packaging>=24.2",
    "requests>=2.32.4",
]
dev = ["pre-commit>=4.0.1,<5", "ruff>=0.7.4,<0.15"]

[tool.ruff.lint]
select = [
    "C4",
    "E",
    "F",
    "W",
    "C90",
    "I",
    "INP",
    "ISC",
    "PGH",
    "PL",
    "UP",
    "N",
    "RUF",
    "TCH",
    "TID251",
]

ignore = [
    "PLR0913",
    "PLR0914",
    "PLR0912",
    "PLR0915",
    "PLR0904",
    "PLR0911",
    "PLR0916",
    "PLR1702",
    "PLR1704",
    "PLR0402",
    "PLR0206",
    "PLW0603",
    "PLR2004",
    "PLR6301",
    "PLR6201",
    "RUF012",
    "TCH002",
    "E402",
    "C901",
    "E501",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"time.sleep".msg = "Use interruptible_sleep() from pyclashbot.utils.cancellation instead for proper thread cancellation support."

[tool.isort]
profile = "black"
