[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclashbot"
version = "v0.0.0"
description = "Automated Clash Royale"
authors = [
    { name = "Matthew Miglio", email = "matthew@pyclashbot.app" },
    { name = "Martin Miglio", email = "code@martinmiglio.dev" },
]
requires-python = ">=3.12.0,<3.13"
readme = "README.md"
license = {text = "NC-CL-1.0 AND CC-BY-NC-SA-4.0"}
classifiers = [
    "License :: Other/Proprietary License",
]
dependencies = [
    "opencv-python>=4.9.0,<5",
    "numpy>=2.2.1,<3",
    "pymemuc>=0.6.0,<0.7",
    "psutil>=6.1.0,<8",
    "pypresence>=4.3.0,<5",
    "pillow>=12.2.0,<13.0.0",
    "ttkbootstrap>=1.20.0,<1.21",
]

[tool.setuptools.packages.find]
include = ["pyclashbot*"]
exclude = ["assets*", "scripts*"]

[project.urls]
homepage = "https://pyclashbot.app"

[dependency-groups]
build = [
    "cx-freeze>=8.6.4,<9; sys_platform == 'win32'",
    "pyinstaller>=6.0.0,<7; sys_platform == 'darwin'",
    "packaging>=24.2",
    "requests>=2.33.0",
]
dev = [
    "pre-commit>=4.0.1,<5",
    "ruff>=0.7.4,<0.16",
    "pytest>=9.0.3,<10",
    "ty>=0.0.49",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Offline by default: bare `pytest` (and CI) skips emulator tests. A CLI
# `-m emulator` overrides this (the last -m wins). `make test-emulator` does that.
addopts = "--strict-markers -m 'not emulator'"
markers = [
    "emulator: requires a live emulator with Clash Royale parked on the main menu",
]

[tool.ruff.lint]
select = [
    "C4",
    "E",
    "F",
    "W",
    "C90",
    "I",
    "INP",
    "ISC",
    "PGH",
    "PL",
    "UP",
    "N",
    "RUF",
    "TCH",
    "TID251",
]

ignore = [
    "PLR0913",
    "PLR0914",
    "PLR0912",
    "PLR0915",
    "PLR0904",
    "PLR0911",
    "PLR0916",
    "PLR1702",
    "PLR1704",
    "PLR0402",
    "PLR0206",
    "PLW0603",
    "PLR2004",
    "PLR6301",
    "PLR6201",
    "RUF012",
    "TCH002",
    "E402",
    "C901",
    "E501",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"time.sleep".msg = "Use interruptible_sleep() from pyclashbot.utils.cancellation instead for proper thread cancellation support."

[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
# Build-time deps used by scripts/ live in the `build` dependency group
# (platform-gated), which isn't installed in the default dev venv.
allowed-unresolved-imports = ["cx_Freeze", "PyInstaller.**", "requests"]

# ttkbootstrap >=1.18 ships stubs covering bootstyle= on its widgets, but calls
# through tkinter base types (e.g. Misc.configure(foreground=...)) still hit
# typeshed signatures that don't know ttkbootstrap's restyled kwargs.
[[tool.ty.overrides]]
include = ["pyclashbot/interface/**"]

[tool.ty.overrides.rules]
unknown-argument = "warn"
