[tool.poetry]
name = "pyclashbot"
version = "v0.0.0"
description = "Automated Clash Royale"
readme = "../README.md"
authors = [
  "Matthew Miglio <matthew@pyclashbot.app>",
  "Martin Miglio <code@martinmiglio.dev>",
]
homepage = "https://pyclashbot.app"
include = [
  "../README.md",
  "pyclashbot/detection/reference_images/**/*.png",
  "pyclashbot/__version__",
  "pyclashbot/__pb__",
]


[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
opencv-python = "^4.9.0"
numpy = "^1.26.4"
pysimplegui = "^4.0.0"
pymemuc = "^0.5.5"
psutil = "^5.9.8"
requests = "^2.31.0"
pygetwindow = "^0.0.9"
pyautogui = "^0.9.54"
pygame = "^2.5.2"


[tool.poetry.group.build]
optional = true


[tool.poetry.group.build.dependencies]
cx-freeze = "^7.2.0"
poethepoet = "^0.25.0"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
vulture = "^2.11"
isort = "^5.13.0"
poethepoet = "^0.25.0"
notebook = "^7.2.2"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
decorator = "^5.1.1"
ruff = "^0.6.4"


[tool.poe.tasks.build-dist]
shell = """
$Env:version | Out-File -FilePath "pyclashbot/__version__" -Encoding utf8
$Env:pb_api_key | Out-File -FilePath "pyclashbot/__pb__" -Encoding utf8
poetry run python setup_msi.py bdist_msi --target-version $Env:version
"""
interpreter = "powershell"


[[tool.poe.tasks.build-dist.args]]
name = "version"
default = "v0.0.0"
options = ["-v", "--version"]


[tool.poe.tasks.tag]
shell = """
git push origin master
git tag -a $Env:tagname -m "Release $Env:tagname"
git push origin $Env:tagname
"""
interpreter = "powershell"


[[tool.poe.tasks.tag.args]]
name = "tagname"
default = "v0.0.0"
positional = true
required = true


[tool.poe.tasks.vulture]
shell = """
poetry run vulture pyclashbot --min-confidence 60
"""
interpreter = "powershell"


[tool.poe.tasks.lint]
shell = """
poetry run ruff check
"""
interpreter = "powershell"


[tool.ruff.lint]
select = ["ALL"]


[tool.ruff]
line-length = 88


[tool.isort]
profile = "black"
