[project]
name = "pyclashbot"
version = "v0.0.0"
description = "Automated Clash Royale"
authors = [
    { name = "Matthew Miglio", email = "matthew@pyclashbot.app" },
    { name = "Martin Miglio", email = "code@martinmiglio.dev" },
]
requires-python = ">=3.12.0,<3.14"
readme = "../README.md"
dependencies = [
    "opencv-python>=4.9.0,<5",
    "numpy>=2.2.1,<3",
    "pymemuc>=0.6.0,<0.7",
    "psutil>=6.1.0,<7",
    "freesimplegui>=5.2.0,<6",
]

[project.urls]
Homepage = "https://pyclashbot.app"

[dependency-groups]
build = [
    "cx-freeze>=8.3.0,<9",
    "poethepoet>=0.36.0,<0.37",
]
dev = [
    "pre-commit>=4.0.1,<5",
    "vulture~=2.13",
    "isort>=5.13.0,<6",
    "poethepoet>=0.36.0,<0.37",
    "notebook>=7.4.4,<8",
    "ipykernel>=6.29.2,<7",
    "matplotlib>=3.8.3,<4",
    "decorator>=5.1.1,<6",
    "ruff>=0.7.4,<0.8",
]

[tool.uv]
default-groups = [
    "build",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = [
    "../README.md",
    "pyclashbot/detection/reference_images/**/*.png",
    "pyclashbot/__version__",
]

[tool.hatch.build.targets.wheel]
include = [
    "../README.md",
    "pyclashbot/detection/reference_images/**/*.png",
    "pyclashbot/__version__",
]

[tool.poe.tasks.build-dist]
shell = """
$Env:version | Out-File -FilePath "pyclashbot/__version__" -Encoding utf8
poetry run python setup_msi.py bdist_msi --target-version $Env:version
"""
interpreter = "powershell"

[[tool.poe.tasks.build-dist.args]]
name = "version"
default = "v0.0.0"
options = ["-v", "--version"]

[tool.poe.tasks.tag]
shell = """
git push origin master
git tag -a $Env:tagname -m "Release $Env:tagname"
git push origin $Env:tagname
"""
interpreter = "powershell"

[[tool.poe.tasks.tag.args]]
name = "tagname"
default = "v0.0.0"
positional = true
required = true

[tool.poe.tasks.vulture]
shell = """
poetry run vulture pyclashbot --min-confidence 60
"""
interpreter = "powershell"

[tool.poe.tasks.lint]
shell = """
poetry run ruff check
"""
interpreter = "powershell"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
